@@ -15,6 +15,10 @@
 	<LI>HTMLDOC now supports a full alpha channel in PNG
 	files.
 
+	<LI>HTMLDOC now reports an error when a table, image, or
+	section of text overflows into an adjacent table cell
+	or off the right edge of the page.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>HTMLDOC tried to format tables with no rows or
