@@ -1,5 +1,5 @@
 /*
- * "$Id: progress.h,v 1.1.2.5 2002/05/29 19:51:43 mike Exp $"
+ * "$Id: progress.h,v 1.1.2.6 2002/10/07 19:54:09 mike Exp $"
  *
  *   Progress function definitions for HTMLDOC, a HTML document
  *   processing program.
@@ -51,6 +51,7 @@ typedef enum
   HD_ERROR_READ_ERROR,
   HD_ERROR_WRITE_ERROR,
   HD_ERROR_HTML_ERROR,
+  HD_ERROR_CONTENT_TOO_LARGE,
   HD_ERROR_HTTPBASE = 100
 } HDerror;
 
@@ -71,5 +72,5 @@ extern void	progress_update(int percent);
 #endif /* !_PROGRESS_H_ */
 
 /*
- * End of "$Id: progress.h,v 1.1.2.5 2002/05/29 19:51:43 mike Exp $".
+ * End of "$Id: progress.h,v 1.1.2.6 2002/10/07 19:54:09 mike Exp $".
  */
